client/styles/sidebar.css
/* todo lo del aside (arriba) */
.aside {
    position: relative;
    width: 25%;
    height: 100vh;
    box-sizing: border-box;

    & .userIdContent {
        margin : 0 0 0 5%
    }

    & .aside-logo {
        height: 15vh;
        display: flex;
        align-items: center;
        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
        margin-bottom: 30px;
        background-color: #ffffff;
        justify-content: space-between;
    }

    & #toggleVisibilityButton {
        cursor: pointer;
        /* Hacer saber al usuario que es clickeable */
        border: none;
        /* Quita el borde del botón */
        background: transparent;
        /* fondo transparente */
        margin: 0 5%;
    }
}






/* Botones contacto */
.contacts {
    display: flex;
    flex-direction: column;

    & .contacts-menu {
        display: flex;
        align-items: center;
        width: 90%;
        background-color: #f4f7f6;
        border: none;
        padding: 3% 3%;
        cursor: pointer;
        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
        border-radius: 3px;
        margin: auto;
        margin-bottom: 3%;
    }

    & .contacts-menu:hover {
        background-color: #e5e5e5
    }
    & .contacts-menu.clicked {
        background-color: #cecece;
    }
    & .contacts-menu img {
        width: 20%;
        border-radius: 50%;
        object-fit: cover;
        object-position: center;
        margin-right: 10px;
        aspect-ratio: 1 / 1;
    }    
    
    & .contact-info {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-left: 10px;
        width: 100%;
    }

    & .contact-title {
        width: 15vw;
        text-align: left;
        font-weight: bold;
        font-size: 1.2em;
        font-weight: bold; /* El título en negrita */
        white-space: nowrap; /* Evitar que el texto se envuelva */
        overflow: hidden; /* Ocultar contenido excedente */
        text-overflow: ellipsis; /* Añadir puntos suspensivos si el contenido excede el ancho disponible */
    }
    
    & .last-message {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        width: 15vw;
        margin: 10px 0 0 0;
        text-align: left;
    }
}

/* Opciones del chat (abajo) */
.contactOptions {
    display: flex;
    position: absolute; 
    bottom: 0; /* Fijar en la parte inferior */
    left: 0; /* Alinear a la izquierda */
    width: 100%;
    height: 6vh;
    background-color: #f7f7f7; /* Color de fondo */
    box-shadow: 4px -6px 10px rgba(0, 0, 0, 0.1);
    align-items: center;
    justify-content: space-evenly;
}


.contactOptions button {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    display: flex;
    align-items: center; 
    justify-content: center; 
    height: 100%; 
    width: auto; 
}

.contactOptions button img {
    height: 75%; 
    width: auto; 
    border-radius: 50%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    object-position: center;
    transition: opacity 0.3s ease; /* Transición suave para el efecto de opacidad */
}

.contactOptions button:hover img {
    opacity: 0.7; /* Efecto de opacidad al pasar el mouse */
}




/* Estilos para el modal */
.modal {
    position: fixed; /* Posicionamiento fijo en la pantalla */
    top: 0;
    left: 0;
    width: 100%;
    height: 100%; 
    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparente */
    display: flex;
    align-items: center; 
    justify-content: center;
    z-index: 10; 
    opacity: 0;
    pointer-events: none;

    /* Estilos para el contenido del modal */
    & .modal-content {
        background-color: white;
        padding: 20px;
        border-radius: 8px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
        position: relative; 
        display: flex;
        flex-direction: column;
        align-items: center; 
    }

    & .modal-add-contact.modal-content {
        width: 20%; 
    }

    & .modal-help.modal-content {
        width: 30%; 
    }

    & .modal-settings.modal-content {
        width: 30%; 
    }

    & .modal-user.modal-content {
        width: 25%; 
        height: 75%;
    }

    & .modal-croppie .modal-content {
        width: 30%;
        height: auto;
    }

    & .uploadForm {
        width: 80%;
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 20px 0 10px 0;
        justify-content: space-between;
    }
    
    & .modal-user button[type="submit"] {
        width: 90%;
        padding: 10px;
        margin-top: 20px;
        background-color: #007bff;
        color: white;
        border: none;
        border-radius: 4px; 
        cursor: pointer;
        font-size: 16px;
    }
    
    & .modal-user button[type="submit"]:hover {
        background-color: #0056b3; /* Un azul más oscuro para el hover */
    }
    
    & .modal-user .user-profile-image {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    & .label-result{
        color: rgb(192, 0, 0);
        font-size: 0.85em;
    }

    & .form-group {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    & label, input, button {
        text-align: center;
    }

    & input[type="file"]{
        display: none;
    }

    & input[type="text"], button.submit-button {
        padding: 6px;
        margin-top: 5px;
        text-align: left;
    }

    & button.submit-button {
        background-color: #007bff;
        color: white;
        border: none;
        border-radius: 4px;
        cursor: pointer;
        font-size: 16px;
    }

    & button.submit-button:hover {
        background-color: #0056b3;
    }

    & .close-button {
        position: absolute;
        top: 10px;
        right: 10px;
        font-size: 24px;
        cursor: pointer;
    }

}

.modal--show {
    opacity: 1;
    pointer-events: unset;
}

.notification {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    border-radius: 5px;
    z-index: 11;
    display: none;
}

/* Profile */
.profile-element {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 10px;
}

.profile-element input {
    padding: 5px;
    border: 1px solid #ccc;
    border-radius: 3px;
    width: 250px;
    font-size: 14px;
}

.profile-info{
    width: 80%;
}

.image-container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    overflow: hidden;
    margin: 0 auto;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
}

.input-container {
    position: relative;
    margin: 25px 0;
}

.input-container label {
    position: absolute;
    left: 10px;
    top: 10px;
    color: #999;
    transition: all 0.3s;
    pointer-events: none;
}

.input-container input:focus + label,
.input-container input:valid + label {
    top: -10px;
    font-size: 12px;
    color: #333;    
}

.input-container textarea:focus + label,
.input-container textarea:valid + label {
    top: -14px;
    font-size: 12px;
    color: #333;    
}

.input-container input,
.input-container textarea {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    resize: none;
}

.upload-label, .delete-button, .save-button, .cancel-button {
    padding: 10px;
    margin-top: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    cursor: pointer;
    text-align: center;
    display: block;
    background-color: #007bff; 
    color: white; 
    font-size: 16px; 
}

.delete-button, .cancel-button {
    background-color: #505050
}

.upload-label:hover, .save-button:hover {
    background-color: #0c72e1
}

.delete-button:hover, .cancel-button:hover {
    background-color: #333;
}

.croppie-controls {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-top: 10px;
}

/* Estilos para pantallas pequeñas */
@media only screen and (max-width: 600px) {
    .modal-content {
        width: 90%; /* Ancho del modal para pantallas pequeñas */
        max-width: none; /* Anula el ancho máximo */
    }

    label, input, button {
        width: 100%; /* Ajuste del ancho al 100% para pantallas pequeñas */
    }
}

